--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="grid two hero-wrap section">
         <!-- Left copy -->
         <div class="hero-left">
-          <h1>Sensibilisez vos équipes à la cybersécurité — en 1/2 journée</h1>
-          <p class="lead">Pour vous permettre de découvrir notre méthode, <strong>nous offrons un atelier</strong> de sensibilisation à la cybersécurité <strong>(valeur 1490 €)</strong>. En 3h30–4h, vos équipes acquièrent les bons réflexes pour réduire le <em>facteur risque humain</em> — première cause d’intrusion dans les cabinets.</p>
+          <h1>Sensibilisez vos équipes à la cybersécurité</h1>
+          <p class="lead">Pour vous permettre de découvrir notre méthode, <strong>nous offrons un atelier</strong> de sensibilisation à la cybersécurité <strong>(valeur 1490 €)</strong>. En 3 heures, vos équipes acquièrent les bons réflexes pour réduire le <em>facteur risque humain</em> — première cause d’intrusion dans les cabinets.</p>
           <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:10px">
             <a href="#hero-form" class="btn">Réserver l’atelier offert</a>
             <a href="#faq" class="btn-ghost">Questions fréquentes</a>
@@ -247,8 +247,8 @@
       <div class="container">
         <div class="kpis">
           <div class="kpi">
-            <span class="big">3h30–4h</span>
-            <p>Présentiel ou visio · Jusqu’à 20 participants · Supports fournis</p>
+            <span class="big">3h</span>
+            <p>Présentiel ou visio · Jusqu’à 250 participants · Supports fournis</p>
           </div>
           <div class="kpi">
             <span class="big">−60% <small style="font-weight:600">d’incidents e-mail</small></span>
@@ -382,3 +382,4 @@
   </script>
 </body>
 </html>
+
