--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <section class="section" style="padding-top:10px">
       <div class="container">
         <div class="features">
-          <div class="feature"><h3>Rapide</h3><p class="lead" style="font-size:16px">Une demi-journée suffit pour élever le niveau et adopter les bons réflexes.</p></div>
+          <div class="feature"><h3>Rapide</h3><p class="lead" style="font-size:16px">3 heures suffisent pour élever le niveau et adopter les bons réflexes.</p></div>
           <div class="feature"><h3>Impact mesurable</h3><p class="lead" style="font-size:16px">Checklist post-atelier, mini-quiz et suivi des progrès en 30 jours.</p></div>
           <div class="feature"><h3>Offert</h3><p class="lead" style="font-size:16px">Valeur 1490 € prise en charge — <strong>places limitées</strong> ce mois-ci.</p></div>
         </div>
@@ -299,9 +299,8 @@
       <div class="container">
         <h2 id="faq-title">FAQ</h2>
         <div class="grid" style="gap:12px">
-          <details class="faq"><summary>Qui peut en bénéficier ?</summary><p class="lead" style="font-size:15px">PME/ETI, cabinets (compta, juridique, IT) et équipes support. Jusqu’à 20 participants par session.</p></details>
-          <details class="faq"><summary>Présentiel ou distanciel ?</summary><p class="lead" style="font-size:15px">Les deux sont possibles. Nous adaptons les cas et outils à votre contexte.</p></details>
-          <details class="faq"><summary>Combien de participants ?</summary><p class="lead" style="font-size:15px">Idéalement 8–15. Au-delà de 20, prévoir deux créneaux.</p></details>
+          <details class="faq"><summary>Qui peut en bénéficier ?</summary><p class="lead" style="font-size:15px">PME/ETI, cabinets (compta, juridique, IT) et équipes support.</p></details>
+          <details class="faq"><summary>Présentiel ou distanciel ?</summary><p class="lead" style="font-size:15px">Le distanciel est le format privilégié, accessible jusqu’à 250 participants.</p></details>
           <details class="faq"><summary>Qu’attendez-vous de nous avant l’atelier ?</summary><p class="lead" style="font-size:15px">Un point rapide (15–20 min) pour connaître vos risques métiers et vos outils en place.</p></details>
         </div>
       </div>
@@ -382,4 +381,5 @@
   </script>
 </body>
 </html>
+
 
