--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <!-- Modules -->
     <section id="programme" class="section">
       <div class="container">
-        <h2>En une demi-journée, vos équipes découvrent</h2>
+        <h2>Vos équipes découvrent</h2>
         <div class="grid two">
           <div class="card">
             <h3>Détecter & réagir aux menaces</h3>
@@ -248,7 +248,7 @@
         <div class="kpis">
           <div class="kpi">
             <span class="big">3h</span>
-            <p>Présentiel ou visio · Jusqu’à 250 participants · Supports fournis</p>
+            <p>En visio principalement· Jusqu’à 250 participants</p>
           </div>
           <div class="kpi">
             <span class="big">−60% <small style="font-weight:600">d’incidents e-mail</small></span>
@@ -381,5 +381,6 @@
   </script>
 </body>
 </html>
+
 
 
