--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="kpis">
           <div class="kpi">
             <span class="big">3h</span>
-            <p>En visio principalement· Jusqu’à 250 participants</p>
+            <p>En visio · Jusqu’à 250 participants</p>
           </div>
           <div class="kpi">
             <span class="big">−60% <small style="font-weight:600">d’incidents e-mail</small></span>
@@ -381,6 +381,7 @@
   </script>
 </body>
 </html>
+
 
 
 
