--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Atelier de sensibilisation cybersécurité (offert)</title>
-  <meta name="description" content="En une demi-journée, formez vos équipes à détecter le phishing, réagir aux ransomwares, protéger les données sensibles et réduire le risque humain. Atelier offert (valeur 1490 €).">
+  <meta name="description" content="Formez vos équipes à détecter le phishing, réagir aux ransomwares, protéger les données sensibles et réduire le risque humain. Atelier offert (valeur 1490 €).">
 
   <style>
     /* === IT SYSTÈMES — Palette & base === */
@@ -381,3 +381,4 @@
   </script>
 </body>
 </html>
+
